# GetRichProject

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CURSOR_HANDOFF_V040.md  DEPLOY_VULTR.md  Dockerfile  GITHUB_VERSION_CONTROL.md  README.md  UPDATE_TENCENT.md  UPGRADE_V065_1PANEL.md  UPGRADE_V070_1PANEL.md  compose.yaml  docker-entrypoint.sh  pyproject.toml
caddy/: Caddyfile
examples/: demo-data.json
scripts/: build_release_v040.py  build_release_v050.py  build_release_v060.py  build_release_v061.py  build_zipapp.py  check_v040.sh  upgrade_env_v020.sh  upgrade_env_v030.sh  upgrade_env_v040.sh
src/score_fourfold/: __init__.py  ai_analyzer.py  analyzer.py  auth.py  cli.py  config.py  database.py  domain.py  mail.py  provider.py  scheduler.py  service.py  strategy.py  web.py
tests/: helpers.py  test_ai_analyzer.py  test_analyzer.py  test_auth.py  test_config.py  test_database.py  test_had.py  test_integration.py  test_provider.py  test_schedule.py  test_settlement.py  test_strategy.py  test_web.py
